# 2DProjectTemplate

./: CMakeLists.txt  README.md
headers/: Map.h
headers/FrameAnim/: FrameAnimation.h
headers/animation/: Animation.h
headers/renderer/: Renderer.h
headers/types/: Types.h
src/: Animation.cpp  FrameAnimation.cpp  Main.cpp  MainLoop.cpp  Map.cpp  Renderer.cpp
